<resources>
    <string name="app_name">Redsol</string>
    <string name="facebook_app_id">601808097052754</string>
    <string name="fb_login_protocol_scheme">fb601808097052754</string>
    <string name="google_maps_key" translatable="false">AIzaSyBcII7hCx23_Hj02DvXwpdUIMF5gyu8KVw</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="in_build">En construcción</string>
    <string name="my_profile">Mi perfil</string>
    <string name="config">Configuración</string>
    <string name="contact_us">Contáctanos</string>
    <string name="suggest_resources">Sugerir recursos</string>
    <string name="create_organization">Crear Organización</string>
    <string name="progress">En Progreso!</string>
    <string name="no_resources">No hay recursos para mostrar</string>
    <string name="missing_data">Por favor complete el formulario</string>
    <string name="my_categories">Mis Categorías</string>
    <string name="my_resources">Mis Recursos</string>
    <string name="count_resources">Contabilizar recursos</string>
    <string name="count_question_1">Usted está solicitando contabilizar para la categoría o servicio genérico: %1$s? , le recomendamos contabilizar recursos en servicios detallados, si no los ha definido puede definirlos en "Mis Recursos". Si aún así desea continuar esta contabilización por favor seleccione "Aceptar"</string>
    <string name="count_question_2">Usted está solicitando contabilizar para el servicio %1$s? ¿Está seguro que es el recurso que desea escanear?</string>
    <string name="service_count_question">¿Desea contabilizar este servicio?</string>
    <string name="service">Servicio</string>
    <string name="category_count_question">¿Desea contabilizar esta categoría?</string>
    <string name="the_1">la</string>
    <string name="the_2">el</string>
    <string name="offered_1">ofrecida</string>
    <string name="offered_2">ofrecido</string>
    <string name="user_attention_success">El usuario %1$s ha sido registrado como atendido</string>
    <string name="no_user_create_account_success">%1$s ha sido registrado como nuevo usuario con una contraseña provisional</string>
    <string name="user_attention_error">Ha ocurrido un error registrando el usuario %1$s</string>
    <string name="posted_category">El usuario %1$s ha sido atendido para un servicio
        no detallado de la categoría %2$s</string>
    <string name="error_posted_category">Error al contabilizar categoría</string>
    <string name="posted_service_2">El usuario %1$s ha sido atendido para un servicio genérico no categorizado</string>
    <string name="posted_service">El usuario %1$s ha sido atendido para el servicio %2$s </string>
    <string name="error_posted_service">Error al contabilizar servicio</string>
    <string name="invalid_name">Agregue un nombre válido</string>
    <string name="invalid_lastname">Agregue un apellido válido</string>
    <string name="invalid_email">Agregue un email válido</string>
    <string name="invalid_phone">Agregue un teléfono válido</string>
    <string name="invalid_user">Usuario no valido</string>
    <string name="my_resourse_detailed">Mis recursos detallados</string>
    <string name="map">Mapa</string>
    <string name="scan_qr">Scan QR</string>
    <string name="search">Buscar</string>
    <string name="users">Usuarios</string>
    <string name="attenders">Usuarios atendidos</string>
    <string name="change_pass">Cambio de contraseña</string>
    <string name="info_services">Información servicios</string>
    <string name="count_attention">Contabilizar atención (no usuarios)</string>
    <string name="count_attention_msg">Introduzca la información de la persona que está recibiendo la atención y que no dispone de código QR</string>
    <string name="create_new_service">Crear nuevos servicios</string>
    <string name="new_pass">Nueva contraseña</string>
    <string name="min_request">Requisitos mínimos:</string>
    <string name="eigth_character">Debe tener al menos 8 caracteres</string>
    <string name="at_lest_one_number">Debe tener al menos 1 número</string>
    <string name="at_lest_one_special_character">Debe tener al menos 1 caracter especial</string>
    <string name="bad">Pésima</string>
    <string name="good">Óptima</string>
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="detail">Detalle</string>
    <string name="results">Resultados</string>
    <string name="search_results">Resultados de la búsqueda</string>
    <string name="select_category">Ahora, seleccione una categoría</string>
    <string name="empty_list">No hay resultados con los criterios ingresados.</string>
    <string name="welcome">Bienvenido a</string>
    <string name="welcome_2">Bienvenido,</string>
    <string name="required_fields">*Campos  obligatorios</string>
    <string name="please_complete_form">Por favor complete el formulario</string>
    <string name="please_complete_fields">Por favor completa los campos para continuar con el registro</string>
    <string name="intro_email_acount">Para reiniciar su contraseña, por favor introduzca el correo electrónico asociado a su cuenta</string>
    <string name="register_later">Registrarme luego</string>
    <string name="login">Iniciar sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="register_me">Registrarme</string>
    <string name="register">Registrate como nuevo usuario</string>
    <string name="restore_pass">Reestablecer contraseña</string>
    <string name="register_for_use_options">Puedes utilizar la mayoria de las opciones disponibles de la app</string>
    <string name="email_example">example@correo.com</string>
    <string name="ready">Listo</string>
    <string name="has_read_and_accept">He leido y acepto los</string>
    <string name="terms_conditions">Términos y condiciones</string>
    <string name="understand_and_accept">Entiendo y acepto las</string>
    <string name="policies">Politicas de privacidad</string>
    <string name="welcome_success">Bienvenido %1$s, ya puedes iniciar sesión</string>
    <string name="go_to_login">Iniciar sesión</string>
    <string name="error_creating_user">Ups! Lo sentimos, ocurrió un error registrando nuevo usuario</string>
    <string name="error_creating_organization">Ups! Lo sentimos, ocurrió un error registrando nueva organización</string>
    <string name="error_creating_user_email_exist">Ups! Lo sentimos, el email ya existe. Puede intentar con otro email, o reestablecer la contraseña</string>
    <string name="failed_register">Error, el email ya existe. Puede intentar con otro email, o reestablecer la contraseña</string>
    <string name="register_new_user">Registro nuevo usuario</string>
    <string name="reset_pass">Reseteo de contraseña</string>
    <string name="enter_valid_code">Introduzca un código válido</string>
    <string name="accept_term_condition">Debe aceptar los términos y condiciones</string>
    <string name="accept_privacy_policies">Debe aceptar las politicas de privacidad</string>
    <string name="enter_valid_name">Introduzca un nombre válido</string>
    <string name="enter_valid_last_name">Introduzca un apellido válido</string>
    <string name="enter_valid_email">Introduzca un correo válido</string>
    <string name="enter_valid_pass">Introduzca una contraseña válida</string>
    <string name="user_info_to_display">ID: %1$s\nNombre: %2$s %3$s\nCorreo electrónico:%4$s</string>
    <string name="pending">Pendientes por usar</string>
    <string name="offered_resourses">Recursos ofrecidos</string>
    <string name="saved">Guardados</string>
    <string name="write">Escribir...</string>
    <string name="volunteering">Voluntariado</string>
    <string name="used">Utilizados</string>
    <string name="near_to">Cerca de</string>
    <string name="near_to_location">Cerca de %1$s</string>
    <string name="next">Siguiente</string>
    <string name="name">Nombre</string>
    <string name="name_2">Nombre*</string>
    <string name="dni">Documento de identificación</string>
    <string name="origin_county">País de origen</string>
    <string name="lastName">Apellido</string>
    <string name="lastName_2">Apellido*</string>
    <string name="organization_name">Nombre de la organización*</string>
    <string name="from_red_solidaria_team">De parte del equipo de Red Solidaria nos gustaría conocer como ayudarte, puedes dejar aquí cualquier comentario, duda o sugerencia</string>
    <string name="web_site">Página web</string>
    <string name="email">Correo</string>
    <string name="email_attention">Correo*</string>
    <string name="sex">Género</string>
    <string name="age">Edad</string>
    <string name="or">ó</string>
    <string name="create_organization_success">Organización %1$s creada exitosamente!</string>
    <string name="countries_prompt">Seleccione un país de origen</string>
    <string name="countries_hint">Seleccione un país</string>
    <string name="position_permissed">Esta aplicación no puede funcionar sin los permisos de localización.</string>
    <string name="location_on">es necesario encender el GPS para poder continuar</string>
    <string name="here">aquí</string>
    <string name="location">Ubicación</string>
    <string name="location_mandatory">Ubicación*</string>
    <string name="phone">Teléfono</string>
    <string name="schedule">Horario</string>
    <string name="aditional_info">Información adicional</string>
    <string name="description">Descripción</string>
    <string name="description_mandatory">Descripción*</string>
    <string name="services_desc">Descripción de Servicios</string>
    <string name="about_us">Acerca de la Organización</string>
    <string name="service_plan">Plan de servicio</string>
    <string name="change_plan">Cambiar Plan</string>
    <string name="change_plan_inf">Para cambiar el plan, agregue servicios detallados</string>
    <string name="we_are">¿Quienes somos?</string>
    <string name="send">Enviar</string>
    <string name="create">Crear</string>
    <string name="register_count">Registrar y contar</string>
    <string name="cancel">Cancelar</string>
    <string name="interested">Interesados</string>
    <string name="attend">Atendidos</string>
    <string name="save">Guardar</string>
    <string name="resource_saved">Se ha guardado este proveedor</string>
    <string name="take">Adueñarse</string>
    <string name="continue_p">Continuar</string>
    <string name="accept">Aceptar</string>
    <string name="info_send">Información actualizada satisfactoriamente</string>
    <string name="you_have_to_login">Debes iniciar sesión para utilizar esta función</string>
    <string name="empty_image_description">Empty image</string>
    <string name="home">Principal</string>
</resources>