<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_filled_person_24"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_filled_config_24"
            android:title="@string/config" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_filled_email_24"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_filled_campaign_24"
            android:title="@string/suggest_resources" />
    </group>


</menu>
