<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_person"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_config"
            android:title="@string/config" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_suggest"
            android:title="@string/suggest_resources" />
    </group>


</menu>
