<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_above="@id/lyBottom"
        android:id="@+id/lycont1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <ImageView

            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_red_solidaria_name_2" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_color_primary_round_corner"
            android:paddingHorizontal="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/colorBlack" />

            <TextView

                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/here"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyBottom"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/colorGrey" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_later"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="30dp"
            android:background="@drawable/bg_border_line_primary_round_corner"
            android:paddingHorizontal="20dp"
            android:text="@string/continue_p"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/register_for_use_options"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

</RelativeLayout>