<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_extra_medium"
            android:paddingBottom="@dimen/spacing_extra_medium">

            <TextView
                style="@style/TextBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_small"
                android:text="@string/pending"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_medium"/>

            <TextView
                style="@style/TextBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saved"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSaved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_medium"/>

            <TextView
                style="@style/TextBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volunteering"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvVolunteering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_extra_medium"/>

            <TextView
                style="@style/TextBodyBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/font_size_medium" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/lyEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:src="@drawable/ic_resources"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:tint="@color/colorGrey"
            android:contentDescription="@string/empty_image_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_resources"
            android:textSize="@dimen/font_size_medium"/>

    </LinearLayout>

</LinearLayout>